--- a/src/logic/corelogic.tex
+++ b/src/logic/corelogic.tex
@@ -8,7 +8,7 @@
 %benutzte Packages
 %==============================================================================
 
-\usepackage[english, german]{babel}
+\usepackage[english, ngerman]{babel}
 \usepackage[latin1]{inputenc}
 \usepackage{epsf}
 \usepackage{rotating}
