corelogic.tex verschoben

--- a/src/logic/tex/corelogic.tex
+++ b/src/logic/tex/corelogic.tex
@@ -43,7 +43,7 @@
 
 %\graphicspath{{}{}}
 
-\title{Title}
+\title{Logik in Clojure mit core.logic}
 \author{Chris Weber und Julian Schmitt}
 
 %==============================================================================
@@ -52,7 +52,7 @@
 %
 %==============================================================================
 
-\selectlanguage{german}
+\selectlanguage{ngerman}
 %\selectlanguage{english}
 
 %==============================================================================
@@ -72,7 +72,7 @@
 %
 %==============================================================================
 
-
+\input{tex/zebrapuzzel}
 
 \newpage
 %
