--- a/src/logic/tex/corelogic.tex
+++ b/src/logic/tex/corelogic.tex
@@ -26,6 +26,8 @@
 \usepackage{algorithm}
 \usepackage{enumerate}
 \usepackage{epic}
+\usepackage{listings}
+\usepackage{hyperref}
 
 \bibliographystyle{abbrv}
 
@@ -40,6 +42,7 @@
 \setlength{\topmargin}{-41.7pt}
 \setlength{\topskip}{10pt}
 \setlength{\footskip}{42pt}
+\def\code#1{\texttt{#1}}
 
 %\graphicspath{{}{}}
 
@@ -72,7 +75,9 @@
 %
 %==============================================================================
 
-\input{tex/zebrapuzzel}
+\input{corelogic-relational}
+\input{corelogic-principles}
+\input{corelogic-zebrapuzzle}
 
 \newpage
 %
