--- a/src/logic/tex/corelogic-principles.tex
+++ b/src/logic/tex/corelogic-principles.tex
@@ -1,12 +1,12 @@
-\subsection{Grunds"atze}
+\section{Grunds"atze}
 
-\subsubsection{core.logic}
+\subsection{core.logic}
 
 core.logic ist eine Implementierung des auf Scheme basierenden Solvers: miniKanren
 
 Kanren ist Japanisch und bedeutet so viel wie Relation.
 
-miniKanren in einem Satz: Wenn miniKanren ein Ausdruck und eine gew"unschte Ausgabe gegeben wird, kann es dies “R"uckw"arts” ausführen und findet dabei alle m"oglichen Eingaben zu dem Ausdruck der die gew"unschte Ausgabe erzeugt hat.
+miniKanren in einem Satz: Wenn miniKanren ein Ausdruck und eine gew"unschte Ausgabe gegeben wird, kann es dies \dq{} R"uckw"arts \dq{} ausf"uhren und findet dabei alle m"oglichen Eingaben zu dem Ausdruck der die gew"unschte Ausgabe erzeugt hat.
 
 \subsubsection{Logische Ausdr"ucke}
 
@@ -22,21 +22,21 @@ Ein logischer Ausdruck ist also eine Anweisung für den Solver und besteht aus d
 Je nach Ausdruck, ist die Anzahl der logischen Variablen, die diese Einf"uhren unterschiedlich. (run ..) zum Beispiel, kann nur eine lvar einf"uhren.
 
 
-\subsubsection{Logische Variablen}
-Logische Variablen sind Container für einen nicht eindeutigen Wert. Das heißt, dass eine logische Variable mehrere Werte nacheinander annehmen kann, um diese auszugeben oder weiterzugeben.
-//Wie sind die logischen Variablen implementiert? [...]
-Logische Variablen können spezielle Werte haben, zum Beispiel _0 
-Tafelbild: (run* [q] (== q q)) ; Rückgabe --> _0
-In diesem Fall wird _0 zur"uckgegeben, was so viel bedeutet wie: q kann jeden beliebigen Wert annehmen und erf"ullt immer die Beschr"ankung.
-Für den Fall, dass wir mehrere logische Variablen haben (zB 2) und beide können jeden beliebigen Wert annehmen, müssen aber gleich sein ist die Rückgabe (_0 _0) können beide distinkt voneinander sein: (_0 _1).
+\subsection{Logische Variablen}
+Logische Variablen sind Container für einen nicht eindeutigen Wert. Das heiss{}t, dass eine logische Variable mehrere Werte nacheinander annehmen kann, um diese auszugeben oder weiterzugeben.
+%//Wie sind die logischen Variablen implementiert? [...]
+Logische Variablen k"onnen spezielle Werte haben, zum Beispiel \_0 
+Tafelbild: (run* [q] (== q q)) ; R"uckgabe --> \_0
+In diesem Fall wird \_0 zur"uckgegeben, was so viel bedeutet wie: q kann jeden beliebigen Wert annehmen und erf"ullt immer die Beschr"ankung.
+F"ur den Fall, dass wir mehrere logische Variablen haben (zB 2) und beide k"onnen jeden beliebigen Wert annehmen, m"üssen aber gleich sein ist die R"uckgabe (\_0 \_0) k"onnen beide distinkt voneinander sein: (\_0 \_1).
 Logische Variablen werden auf 2 Arten in ein logisches Programm eingef"uhrt:
-(run* [q] …)
-(fresh [...] …)
-Während (run* ...) immer nur 1 logische Variable einf"uhren kann, f"uhrt (fresh …) beliebig viele ein, muss aber innerhalb von einem (run* …) Befehl stehen.
+(run* [q] ...
+(fresh [...] ...)
+W"ahrend (run* ...) immer nur 1 logische Variable einf"uhren kann, f"uhrt (fresh ...) beliebig viele ein, muss aber innerhalb von einem (run* ...) Befehl stehen.
 
-\subsubsection{Beschr"ankungen}
+\subsection{Beschr"ankungen}
 
-Beschränkungen oder auch Constraints sind Ausdrücke die die Werte die eine logische Variable annehmen kann, beschränken. Es können mehrere Beschränkungen existieren die untereinander in einer Konjunktion stehen:
+Beschr"ankungen oder auch Constraints sind Ausdr"ucke die die Werte die eine logische Variable annehmen kann, beschr"anken. Es k"onnen mehrere Beschr"ankungen existieren die untereinander in einer Konjunktion stehen:
 \begin{lstlisting}
 (run* [q]
     (constraint-1)
@@ -47,8 +47,8 @@ Beschränkungen oder auch Constraints sind Ausdrücke die die Werte die eine log
 
 Hier muss ein Wert alle 3 Constraints erf"ullen, um als Wert von q angenommen werden zu k"onnen.
 \begin{lstlisting}
-Beispiel aus der Präsentation
+Beispiel aus der Pr"asentation
 \end{lstlisting}
 
-Im Beispiel muss ein Wert in den beiden Mengen \code{[1 2 3]} und \code{[2 3 4]} beinhaltet sein, um von q als Wert angenommen zu werden. Ergebnis wäre hier \code{[2 3]}.
+Im Beispiel muss ein Wert in den beiden Mengen [1 2 3] und [2 3 4] beinhaltet sein, um von q als Wert angenommen zu werden. Ergebnis w"are hier [2 3] .
 
