--- a/src/logic/tex/corelogic-relational.tex
+++ b/src/logic/tex/corelogic-relational.tex
@@ -1,2 +1,27 @@
 \subsection{Relationale Programmierung}
 
+Eine Relation plus stellt eine Abbildung des Kreuzprodukts zweier natürlicher Zahlen auf eine natürliche Zahl dar.
+
+\begin{lstlisting}
+plus: N x N -> N
+    (a, b) |-> (+ a b)		a   b   plus
+				1   1   2
+				1   2   3
+				2   2   4
+\end{lstlisting}
+
+Somit können wir unseren Solver nutzen, um zu prüfen ob eine bestimmte Kombination von Argumenten erlaubt ist.
+\begin{lstlisting}
+plus_o Relation	 N x N x N
+		-(1 1 1)- nicht erlaubt
+		 (1 1 2) erlaubt
+\end{lstlisting}
+
+Relationale Programmierung kann rückwärts ausgewertet werden
+
+\begin{lstlisting}
+(run* [q] (== q (plus_o (1 1 q))))
+(run* [q] (== q (plus_o (q 1 3))))
+(run* [q r] (== q (plus_o q r 3)))
+\end{lstlisting}
+
