--- a/src/logic/tex/corelogic-relational.tex
+++ b/src/logic/tex/corelogic-relational.tex
@@ -1,4 +1,4 @@
-\section{Relationale Programmierung}
+\subsection{Relationale Programmierung}
 
 Eine Relation plus stellt eine Abbildung des Kreuzprodukts zweier nat"urlicher Zahlen auf eine nat"urliche Zahl dar.
 
