--- a/src/logic/tex/corelogic.tex
+++ b/src/logic/tex/corelogic.tex
@@ -64,6 +64,8 @@
 
 \maketitle
 \thispagestyle{empty}
+\newpage
+\thispagestyle{empty}
 \vfill
 \tableofcontents
 \vfill
@@ -75,6 +77,7 @@
 %
 %==============================================================================
 
+\input{corelogic-logic-programming}
 \input{corelogic-relational}
 \input{corelogic-principles}
 \input{corelogic-syntax}
