--- a/src/logic/tex/corelogic-logic-programming.tex
+++ b/src/logic/tex/corelogic-logic-programming.tex
@@ -1,13 +1,17 @@
 \section{Einf"uhrung}
 
-\subsection{Logische Programmierung}
+In diesem Kapitel wird die logische Programmierung kurz vorgestellt, um die Grundlagen auf denen auch das Clojure Paket core.logic besteht vorwegzunehmen. Weiterhin sollen auch Grundz"uge der relationalen Programmierung erkl"art werden, auf der einige Funktionen der logischen Programmierung basieren.
 
-Logische Programmierung besteht nicht wie die Funktionale Programmierung aus Folgen von Anweisungen, sondern aus Regeln und Fakten mit denen der Interpreter versucht L"osungsaussagen zu treffen. So gibt man zum Beispiel dem Interpreter die Regel, dass die Variable x eine Zahl sein soll, die gleich sein soll mit dem Ergebnis aus \code{2 + 3}.
+\subsection{Grundlagen der logische Programmierung}
+
+Logische Programmierung besteht nicht wie die funktionale Programmierung aus Folgen von Anweisungen, sondern aus Regeln und Fakten mit denen der Interpreter versucht L"osungsaussagen zu treffen. So gibt man zum Beispiel dem Interpreter die Regel, dass die Variable x eine Zahl sein soll, die gleich sein soll mit dem Ergebnis aus \code{2 + 3}.
 
 Der Interpreter oder auch L"osungsmaschine oder Solver genannt, bekommt also ein Ziel (Goal) vorgegeben und versucht dieses mit Hilfe von Fakten R"uckw"arts zu l"osen.
 
-\subsection{Aufbau eines logischen Programms}
 
 Ein logisches Programm besteht also aus einem oder mehreren Ausdr"ucken und einer L"osungsmaschine. Ein logischer Ausdruck ist ein Ziel, dass die L"osungsmaschine erreichen will.
 
 Ein logischer Ausdruck besteht generell aus einer Menge an logischen Variablen und den entsprechenden Beschr"ankungen auf die Variablen. So stellt aus dem vorherigen Beispiel x die logische Variable dar und \code{x = 2 + 3} ist die Beschr"ankung auf x.
+
+
+Die wichtigsten Funktionen die eine logische Programmiersprache ausmachen sind die Unifikation, die Einführung von logischen Variablen und die logische Disjunktion von Beschr"ankungen.
