umlauts in zebrapuzzle and pdf

--- a/src/logic/tex/corelogic-logic-programming.tex
+++ b/src/logic/tex/corelogic-logic-programming.tex
@@ -14,4 +14,4 @@ Ein logisches Programm besteht also aus einem oder mehreren Ausdr"ucken und eine
 Ein logischer Ausdruck besteht generell aus einer Menge an logischen Variablen und den entsprechenden Beschr"ankungen auf die Variablen. So stellt aus dem vorherigen Beispiel x die logische Variable dar und \code{x = 2 + 3} ist die Beschr"ankung auf x.
 
 
-Die wichtigsten Funktionen die eine logische Programmiersprache ausmachen sind die Unifikation, die Einführung von logischen Variablen und die logische Disjunktion von Beschr"ankungen.
+Die wichtigsten Funktionen die eine logische Programmiersprache ausmachen sind die Unifikation, die Einf"uhrung von logischen Variablen und die logische Disjunktion von Beschr"ankungen.
