--- a/src/logic/tex/corelogic-zebrapuzzle.tex
+++ b/src/logic/tex/corelogic-zebrapuzzle.tex
@@ -7,7 +7,7 @@ Bei diesem R"atsel geht es darum, aus einer Menge von 5 Personen, die sich alle 
 Das entsprechendes Codebeispiel kann auf folgender Seite \url{https://github.com/swannodette/logic-tutorial#zebras} gefunden werden.
 
 
-Nachfolgend werden die im Codebeispiel definierten Methoden erklärt.
+Nachfolgend werden die im Codebeispiel definierten Methoden erkl"art.
 
 \subsubsection{righto}
 
@@ -17,7 +17,7 @@ Nachfolgend werden die im Codebeispiel definierten Methoden erklärt.
   ([_ _ [_ . ?r]] (righto x y ?r)))
 \end{lstlisting}
 
-Diese Methode erzeugt alle Beschränkungen, die wir benötigen damit \dq{}y\dq{} rechts von \dq{}x\dq{} steht. Ein rekursiver Aufruf sorgt st"oss{}t den Prozess sooft wieder an bis der Rest, dargstellt durch das \code{?r} behandelt wurde. Genauer werden also die Constraints zurückgegeben, oder auch Goals, die der Solver benötigt um unser Ergebnis zu errechnen.
+Diese Methode erzeugt alle Beschr"ankungen, die wir ben"otigen damit \dq{}y\dq{} rechts von \dq{}x\dq{} steht. Ein rekursiver Aufruf sorgt st"o\ss{}t den Prozess so oft wieder an bis der Rest, dargstellt durch das \code{?r} behandelt wurde. Genauer werden also die Constraints zur"uckgegeben, oder auch Goals, die der Solver ben"otigt um unser Ergebnis zu errechnen.
 
 \subsubsection{nexto}
 
@@ -28,7 +28,7 @@ Diese Methode erzeugt alle Beschränkungen, die wir benötigen damit \dq{}y\dq{}
     ((righto y x 1))))
 \end{lstlisting}
 
-Diese Methode erzeugt Pr"adikate um alle Permutationen eines Objektes zu bekommen, wenn es sich daneben befindet. Auch hier reden wir bei der Rückgabe wieder von Constraints/Goals.
+Diese Methode erzeugt Pr"adikate um alle Permutationen eines Objektes zu bekommen, wenn es sich daneben befindet. Auch hier reden wir bei der R"uckgabe wieder von Constraints/Goals.
 
 \subsubsection{zebrao}
 
@@ -52,11 +52,11 @@ Diese Methode erzeugt Pr"adikate um alle Permutationen eines Objektes zu bekomme
      (nexto [_ _ _ 'fox _] [_ 'chesterfields _ _ _] hs))))
 \end{lstlisting}
 
-Die f"unf H"auser mit jeweils einer Person und deren f"unf verschiedene Eigenschaften, werden intern durch eine Matrix dargestellt. Ein Vektor der gr"oss{}e f"ünf f"ur die Darstellung der H"auser, und jeweils für jedes Haus ein Vektor der Gr"oss{}e f"unf. Ein \dq{}Haus-Vektor\dq{} hat dabei folgende Bedeutung:
-
-\begin{lstlisting}
-["Nationalität" "Zigarettenmarke" "Getränk" "Haustier" "Hausfarbe"]
-\end{lstlisting}
-
+Die f"unf H"auser mit jeweils einer Person und deren f"unf verschiedene Eigenschaften, werden intern durch eine Matrix dargestellt. Ein Vektor der Gr"o\ss{}e f"unf f"ur die Darstellung der H"auser, und jeweils f"ur jedes Haus ein Vektor der Gr"o\ss{}e f"unf. Ein \dq{}Haus-Vektor\dq{} hat dabei folgende Bedeutung:
+\\
+\\
+\code{['Nationalit"at' 'Zigarettenmarke' 'Getr\"ank' 'Haustier' 'Hausfarbe']}
+\\
+\\
 Diese Methode enth"alt s"amtliche Regeln des Puzzles. Durch die Wahl von sprechenden Namen, der verwendeten und selbst definierten Methoden, sind die Regeln sehr gut abzulesen. Die erste Zeile enth"alt z.B. zwei Regeln. Einmal die Regel, das es f"unf H"auser gibt und die Regel, das die Person im mittleren Haus trinkt Milch trinkt. Die zweite Regel sagt aus, das die Person ganz links (firsto, "der Erste") norwegisch ist. Die Dritte, das neben der norwegischen Person ein blaues Haus steht und so weiter.
 Im Programmcode werden in der zweiten Zeile die Zeichen \dq{}lvar\dq{} an das Symbol \dq{}\_\dq{} gebunden. Das erspart einige Zeichen Code und erh"oht die Lesbarkeit.
