--- a/src/logic/tex/corelogic.tex
+++ b/src/logic/tex/corelogic.tex
@@ -9,7 +9,7 @@
 %==============================================================================
 
 \usepackage[english, ngerman]{babel}
-\usepackage[latin1]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage{epsf}
 \usepackage{rotating}
 \usepackage{ifthen}
